2006-10-19  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Run gmcs on build/mcs-test-79698.cs to test for 
	BXC #79698; use build/gmcs.exe as the MCS compiler if building 
	build/mcs-test-79698.cs fails (indicating the installed compiler
	has the bug)

	* build/gmcs.exe: The gmcs compiler from Mono 1.1.18 with the patch
	for http://bugzilla.ximian.com/show_bug.cgi?id=79698 applied

	* build/mcs-test-79698.cs: Test case for the above bug

2006-10-19  Alp Toker  <alp@atoker.com>

	* src/Banshee.Base/Sources/AudioCdSource.cs:
	Avoid gmcs compiler error by referring to disk instance as a field.
	* src/Banshee.Dap/Ipod/UnsupportedDatabaseView.cs:
	* src/PlayerInterface.cs: Replace invalid anonymous method syntax that
	causes gmcs to fail with correct C# 2.0.

2006-10-18  Patrick van Staveren <trick@cvs.gnome.org>

	* src/Banshee.Dap/Mtp/MtpDap.cs: should fix build problems

	See comments on BGO 361878 before compiling MTP support

2006-10-17  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Revert to pre-intltool 0.35 method of using po/LINGUAS,
	but in a more forward-compatible way (po/LINGUAS format does not need
	reverting to pre-0.35 format); intltool 0.35 is not available in
	enough distributions for it to be worth using right now - no complaining!

	ALL_LINGUAS=`grep -v '^#' $srcdir/po/LINGUAS | sed -r ':a;N;$!ba;s/\n/ /g; s/[ ]+/ /g'`

2006-10-17  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Banshee.Burner/BurnerFormatList.cs: Fixed local
	variable resolution problem with the anonymous delegate

2006-10-17  Alp Toker  <alp@atoker.com>

	* dbus-sharp/dbus-sharp/IntrospectionSchema.cs:
	* dbus-sharp/dbus-sharp/UnixMonoTransport.cs:
	Removed. This dead code was being inadvertently compiled due to the
	wildcard in the makefile, causing the build to fail on old Mono
	releases.

2006-10-16  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/daap-sharp/*: updated from mono svn

2006-10-16  Aaron Bockover  <abock@gnome.org>
